NXP-29190: Cleanup / Format